@@ -3642,6 +3642,9 @@ STR_6383    :Open download page
 STR_6384    :Snow
 STR_6385    :Heavy Snow
 STR_6386    :Blizzard
+STR_6387    :Can't lower element here...
+STR_6388    :Can't raise element here...
+STR_6389    :No clearance
 
 #############
 # Scenarios #
